[project]
name = "mini-absr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pandas>=3.0.3",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
